--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/material": "^5.10.1",
     "next": "16.1.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
